<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">E-merg</string>
    <string name="app_version">v1.0</string>
    <string name="app_team">qSeven</string>
    
    <string name="nav_nearby">Nearby</string>
    <string name="nav_add">Add Centre</string>
    <string name="nav_feedback">Feedback</string>
    
    <string name="GPSAlertDialogTitle">GPS is setting</string>
    <string name="GPSAlertDialogMessage">GPS is not enabled. Do you want to go to setting menu</string>
    <string name="settings">Settings</string>
    <string name="cancel">Cancel</string>
    
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_about">About</string>
    <string name="action_map">Map</string>
    <string name="action_share">Share</string>
    
    <string name="bar_nearby">Nearby Centers</string>
    <string name="bar_add_center">New Center</string>
    <string name="bar_add_contact">Add Contact(s)</string>
    <string name="bar_add_service">Add Service(s)</string>
    <string name="bar_map">Map Directions</string>
    <string name="bar_map_view">View Center(s)</string>
    <string name="bar_map_pick">Pick Location</string>
    
    <string name="list_empty">Oops, Sorry\nNo Centers Near You\nhave been Found.\nYou can add one</string>
    
    <string name="btn_next">Next</string>
    <string name="btn_skip">Skip</string>
    <string name="btn_finish">Finish</string>
    
    <string name="hint_phone1">Emergency phone 1</string>
    <string name="hint_phone2">phone 2 (optional)</string>
    <string name="hint_phone3">phone 3 (optional)</string>
    <string name="hint_email">email (optional)</string>
    <string name="hint_name">name of center</string>
    <string name="hint_other_service">if not listed,add here</string>
    
    <string name="spServiceHeader">Service</string>
    <string name="spServiceSubHeader">Select Service(s)</string>
    <string name="spCategoryHeader">Select Category</string>
    

</resources>
